--- a/css/index.css
+++ b/css/index.css
@@ -804,3 +804,105 @@ body{
 .pricing .container .best-price .price input:hover{
     background-color: var(--main-orange-color);
 }
+/* team */
+.team{
+    padding-top: var(--paddingTop);
+    padding-bottom:var(--paddingBottom);
+    
+}
+.team .container{
+    text-align: center;
+}
+.team .container h6{
+    font-size: 24px;
+    font-weight: normal;
+    color: #74b72e;
+    padding-bottom: 20px;
+}
+.team .container h1{
+    font-size: 55px;
+    letter-spacing: 3px;
+    
+}
+@media (max-width:991px) {
+    .team .container h1{
+    font-size: 35px;
+    
+    }
+}
+.team .container h1 > span{
+    color:var(--main-orange-color);
+}
+.team .container .members{
+    display: grid;
+    grid-template-columns: repeat(auto-fill , minmax(200px , 1fr));
+    gap: 20px;
+    padding: 50px 0;
+}
+.team .container .members .member{
+    overflow: hidden;
+}
+
+.team .container .members .member img{
+    max-width: 100%;
+    position: relative;
+    z-index: 1;
+}
+.team .container .members .member .text{
+    position: relative;
+    background-color: #ececec;
+    width: 300px;
+    padding: 10px;
+    transition: 0.3s linear;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
+}
+.team .container .members .member .text h3{
+    padding: 0 0 12px;
+    font-size: 18px;
+    font-weight: normal;
+}
+.team .container .members .member .text p{
+    color: gray;
+}
+.team .container .members .member .icons{
+    background-color: black;
+    color: var(--main-orange-color);
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    transition: 0.3s linear;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    bottom: -100%;
+    left: 0;
+    
+}
+.team .container .members .member .icons i{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 10px;
+    font-size: 17px;
+    color: var(--main-orange-color);
+    border-radius: 50%;
+    border: 1px solid;
+    width: 30px;
+    height: 30px;
+    margin: 6px;
+    cursor: pointer;
+    transition: 0.3s;
+}
+.team .container .members .member .icons i:hover{
+    background-color: var(--main-orange-color);
+    color: white;
+    border: none;
+}
+.team .container .members .member:hover .icons{
+    bottom: -88%;
+}
+.team .container .members .member:hover > .text{
+    bottom: 68px;
+} 
