--- a/css/index.css
+++ b/css/index.css
@@ -945,6 +945,9 @@ body{
     padding: 50px 0;
     animation: clients 15s ease-in-out 0.7s infinite backwards; 
 }
+.testimonial .container .clients > ul:hover{
+    animation-play-state: paused;
+}
 .testimonial .container .clients > ul .client{
     width: calc(1070px / 3);
     background-color: white;
@@ -1014,84 +1017,87 @@ body{
             left: 0;
         }
     }
-} 
-/* .testimonial .container .clients{
-    display: inline-flex;
-    gap: 40px;
-    position: relative; 
-    padding: 50px 0;
-    animation: clients 15s ease-in-out 0.7s infinite backwards; 
 }
-
-.testimonial .container .client{
-    background-color: white;
-    width:calc(390px - 40px);
-} 
-.testimonial .container .clients:hover{
-    animation-play-state: paused;
-}
-
-.testimonial .container .client .text{
-    flex: 1;
-    text-align: center;
+.testimonial .container > ul{
     display: flex;
-    flex-direction: column;
-    align-items: start;
     justify-content: center;
-    padding: 14px;
 }
-.testimonial .container .client .text h1{
-    font-size: 18px;
-    padding: 10px 0;
+.testimonial .container > ul li{
+    width: 15px;
+    height: 15px;
+    background-color: #80808052;
+    border-radius: 50%;
+    margin: 5px;
 }
-.testimonial .container .client .text > p{
-    color: gray;
+.testimonial .container > ul li:first-child{
+    background-color: var(--main-orange-color);
 }
-.testimonial .container .client > p{
-    color: gray;
-    padding: 13px;
-    text-align: start;
-    line-height: 1.6;
-    width: 335px; 
+/* pet-blog */
+.pet-blog{
+    padding-top: var(--paddingTop);
+    padding-bottom: var(--paddingBottom);
 }
-@keyframes clients {
-    0%{
-        left: 0;
-    }
-    50%{
-        left: -400px;
-    }
-    100%{
-        left: 0;
-    }
-    /* 60%{
-        left: -750px;
-    }
-    90%{
-        left: -1125px;
-    } 
+
+.pet-blog .container{
+    text-align: center;
+}
+.pet-blog .container h6{
+    font-size: 24px;
+    font-weight: normal;
+    color: #74b72e;
+    padding-bottom: 20px;
+}
+.pet-blog .container h1{
+    font-size: 55px;
+    letter-spacing: 3px;
+}
 @media (max-width:991px) {
-    @keyframes clients {
-        0% {
-            left: 0;
-        }
-        20%{
-            left: -400px;
-        }
-        40%{
-            left: -800;
-        }
-        60%{
-            left: -1200px;
-        } 
-        80%{
-            left:-800px ;
-        }
-        90%{
-            left: -400px;
-        }
-        100%{
-            left: 0;
-        }
+    .pet-blog .container h1{
+    font-size: 35px;
     }
-} */
+}
+.pet-blog .container h1 > span{
+    color:var(--main-orange-color);
+}
+.pet-blog .container .blogs{
+    display: grid;
+    grid-template-columns: repeat(auto-fill , minmax(268px , 1fr));
+    gap: 30px ;
+    padding: 30px 0;
+}
+}
+@media (max-width:991px) {
+    .pet-blog .container .blogs{
+        display: flex;
+        flex-direction: column;
+    }
+}
+.pet-blog .container .blog{
+    margin: 0 20px;
+    background-color: #ececec;
+}
+.pet-blog .container .blog img{
+    max-width: 100%;
+}
+.pet-blog .container .blog .text{
+    text-align: start;
+    padding: 10px;
+}
+.pet-blog .container .blog .text h3{
+    padding-bottom:20px;
+    font-size: 20px;
+}
+.pet-blog .container .blog .text .icons{
+    padding-bottom: 20px;
+    color: #808080db;
+    font-size: 14px;
+}
+.pet-blog .container .blog .text p{
+    padding-bottom: 20px;
+    color: #808080db;
+    line-height: 1.5;
+}
+.pet-blog .container .blog .text a{
+    font-weight: bold;
+    color: var(--main-orange-color);
+}
